--- a/08/index.html
+++ b/08/index.html
@@ -16,8 +16,10 @@
         <ul class="list">
             <li>
                 <input type="checkbox" name="list1" id="checkbox1">
-                <label for="checkbox1" class="check-box label_top">A lot of pickles</label>
-                <label for="checkbox1" class="check-box label_under">(for the next lessons about CSS)</label>
+                <label for="checkbox1" class="check-box label_top">A lot of pickles
+                    <span class="check-box label_under">(for the next lessons about CSS)
+                    </span></label>
+
             </li>
             <li>
                 <input type="checkbox" name="list2" id="checkbox2">
