add mobile first

--- a/16/index.html
+++ b/16/index.html
@@ -65,8 +65,8 @@
                                 Get started
                                 </a>
                             </li>
-                            <li>
-                                <a href="#" class="btn-">
+                            <li class="li-btn">
+                                <a href="#" class="btn-non-style">
                                 Watch the Video
                                 </a>
                             </li>
